# snapIt

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/auth/: routes.py
app/main/: routes.py
app/repositories/: mysql_repo.py  repositories.py
app/templates/: about.html  appointments.html  base.html  customer.html  customer_appointment.html  customer_login.html  customer_update.html  employee.html  employee_login.html  index.html  shopping_cart.html  update.html
static/: site.css
templates/: about.html  customer.html  customer_login.html  customer_update.html  employee.html  sessions.html  update.html
