[project]
name = "snapit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.3",
    "colorama==0.4.5",
    "colorclass==2.2.2",
    "docopt==0.6.2",
    "flask==2.2.2",
    "flask-mysql-connector==1.1.0",
    "flask-mysqldb==1.0.1",
    "gunicorn==20.1.0",
    "idna==3.10",
    "importlib-metadata==4.12.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markupsafe==2.1.1",
    "mysql-connector-python==8.0.30",
    "mysqlclient==2.2.7",
    "numpy==2.2.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "protobuf==3.20.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==0.21.0",
    "pytz==2024.2",
    "requests==2.32.3",
    "setuptools==75.8.0",
    "six==1.17.0",
    "terminaltables==3.1.10",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "werkzeug==2.2.2",
    "zipp==3.8.1",
]

[dependency-groups]
prod = [
    "gunicorn>=20.1.0",
]
